// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Collapsible> should render as expected 1`] = `
<DocumentFragment>
  <div
    class="CollapsibleStyle__CollapsibleContainer-sc-133mwvh-1 iLODoM aries-collapsible"
    data-testid="collapsible-container"
    tabindex="0"
  >
    <div
      class="CollapsibleStyle__CollapsibleContent-sc-133mwvh-0 lhhVzD"
      tabindex="-1"
    >
      <div
        aria-expanded="false"
        class="CollapsibleStyle__CollapsibleHeader-sc-133mwvh-2 erqJDM collapsible-title"
        role="tab"
      >
        label
        <svg
          class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
          data-testid="icon-svg"
          fill="#000000"
          height="1em"
          viewBox="0 0 100 100"
          width="1em"
        >
          <polygon
            points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Collapsible> should render as expected 2`] = `
<DocumentFragment>
  <div
    class="CollapsibleStyle__CollapsibleContainer-sc-133mwvh-1 iLODoM aries-collapsible"
    data-testid="collapsible-container"
    tabindex="0"
  >
    <div
      class="CollapsibleStyle__CollapsibleContent-sc-133mwvh-0 lhhVzD"
      tabindex="-1"
    >
      <div
        aria-expanded="true"
        class="CollapsibleStyle__CollapsibleHeader-sc-133mwvh-2 icCCTS collapsible-title"
        role="tab"
      >
        label
        <svg
          class="IconStyle__VerticalCenteredSvg-sc-x7d280-0 cqBxxO"
          data-testid="icon-svg"
          fill="#000000"
          height="1em"
          viewBox="0 0 100 100"
          width="1em"
        >
          <polygon
            points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
          />
        </svg>
      </div>
      <div
        class="CollapsibleStyle__CollapsibleBody-sc-133mwvh-3 kkQRvY collapsible-content"
        data-testid="collapsible-content"
      >
        children
      </div>
    </div>
  </div>
</DocumentFragment>
`;
